feat(carddemo-app): translate OPENFIL.jcl to OpenFileApp with ScopedValue<BatchRunContext>
Replace the stub OpenFileApp implementation with the full agent-prompt
implementation per AAP §0.4.1 (JCL → Java main-class mapping):

- Public static final ScopedValue<BatchRunContext> BATCH_CTX field
  (JEP 506 finalized in Java 25) propagating run context per AAP §0.6.6
- Public static main(String[]) entry-point uses ScopedValue.where(...).call(...)
  with pattern-matching switch over Integer rc for mainframe-style exit code
  mapping; no default branch (AAP §0.6.7 exhaustiveness)
- Resolves each of the 5 CICS file IDs (TRANSACT, CCXREF, ACCTDAT, CXACAIX,
  USRSEC) to its configured filesystem path; CXACAIX shares CCXREF (alternate-
  index PATH over CARDXREF KSDS)
- Missing files emit WARN + bump rc to 4 (mainframe-convention warning);
  uncaught exceptions exit with 16 (severe error)
- Uses import module java.base (JEP 511 finalized in Java 25); java.nio.file
  for I/O (AAP §0.6.5); no Spring, no ThreadLocal, no java.io.File,
  no java.util.Date
- @CobolProgram annotation cites SDSF (OPENFIL.jcl) at app/jcl/OPENFIL.jcl
  with translationDate 2025-10-24 (AAP §0.7.1)
- 15 ad-hoc tests verified all 5 file ID paths, env/sysprop precedence,
  ScopedValue propagation, unknown-ID rejection, and rc=0/4 outcomes

Module verification: mvn -B -ntp clean verify → BUILD SUCCESS
  (7 modules build, 119 tests pass in carddemo-tests)